--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -312,7 +312,7 @@ li.close-full-menu{
 	height: 36px;
     line-height: 36px;	
 	background-color: #ff419c;
-	color: #fff !mportant;
+	color: #fff !important;
 	border-radius: 18px;
 	border: 0;
 	transition: all 0.35s;
@@ -566,32 +566,33 @@ nav.navbar.bootsnav.navbar-fixed{
 .logo img{
 	max-height: 50px;
 }
-nav.navbar.bootsnav.navbar-transparent{
-	padding-top: 50px;
-}
-nav.navbar.bootsnav.navbar-transparent .navbar-nav>li{
-	padding: 11px 0 !important;
-}
-nav.navbar.bootsnav.navbar-transparent .logo img{
-	max-height: 80px;
-}
-nav.navbar.bootsnav.navbar-transparent .attr-nav .search a{
-	width: 194px;
-	height: 67px;
-	line-height: 67px;	
-	background: #FF008A;
-	border-radius: 35px;
-	color: #fff;
-	padding: 0 30px;
-		
+nav.navbar.bootsnav.navbar-transparent .attr-nav .search a{			
+	background: #FF008A;	
+	color: #fff;			
 	font-style: normal;
-	font-weight: 800;
-	font-size: 24px;	
-	/* or 25px */
+	font-weight: 800;		
 	text-align: center;
 	text-transform: capitalize;
 	font-family: 'Poppins', sans-serif;
-
+}
+@media screen and (min-width: 1261px){
+    nav.navbar.bootsnav.navbar-transparent{
+        padding-top: 50px;
+    }
+    nav.navbar.bootsnav.navbar-transparent .navbar-nav>li{
+        padding: 11px 0 !important;
+    }
+    nav.navbar.bootsnav.navbar-transparent .logo img{
+        max-height: 80px;
+    }
+    nav.navbar.bootsnav.navbar-transparent .attr-nav .search a{
+        padding: 0 30px;
+        border-radius: 35px;
+        height: 67px;
+        line-height: 67px;
+        font-size: 24px;
+        width: 194px;
+    }    
 }
 @media screen and (max-width: 1760px){
 	nav.navbar.bootsnav.navbar-transparent{
@@ -640,15 +641,19 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
 
 /* Navbar Responsive
 =================================*/
-@media (min-width: 1024px) and (max-width:1400px) {
+@media (min-width: 993px) and (max-width:1400px) {
     body.wrap-nav-sidebar .wrapper .container{
         width: 100%;
         padding-left: 30px;
         padding-right: 30px;
     }
 }
-
-@media (min-width: 1024px) {
+@media (min-width: 1261px) {
+	nav.navbar.bootsnav.navbar-transparent .attr-nav {
+		height: 80px;
+    }
+}
+@media (min-width: 993px) {
     /* General Navbar
     =================================*/
     nav.navbar.bootsnav ul.nav .dropdown-menu .dropdown-menu{
@@ -722,12 +727,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     nav.navbar.bootsnav ul.dropdown-menu.megamenu-content{
         padding: 0 15px !important;
 		margin-top: -2px;
-    }
-
-    nav.navbar.bootsnav ul.dropdown-menu.megamenu-content > li{
-       /*padding: 25px 0 20px;*/
-    }
-
+    }  
     nav.navbar.bootsnav ul.dropdown-menu.megamenu-content.tabbed{
         padding: 0;
     }
@@ -781,8 +781,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         background-color: transparent;
         border: none;
     }	
-	nav.navbar.bootsnav.navbar-transparent .attr-nav {
-		height: 80px;
+	nav.navbar.bootsnav.navbar-transparent .attr-nav {		
 		-webkit-transition: all .3s ease;
 		transition: all .3s ease;
 		display: table;
@@ -832,7 +831,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         opacity: 1;
     	height: auto;
     }
-
+    
     /* Atribute Navigation
     =================================*/
     .attr-nav > ul > li.dropdown ul.dropdown-menu{
@@ -2390,4 +2389,26 @@ ul.side-bar-nav-list {
 ul.side-bar-submenu {
     list-style: none;
     margin: 20px 0;
+}
+
+@media screen and (max-width: 992px){
+	nav.navbar.bootsnav.navbar-fixed .attr-nav{
+        display: none !important;
+    }
+    nav.navbar.bootsnav .navbar-nav > li:first-child{
+        border-top: 0;
+    }
+    nav.navbar.bootsnav .navbar-nav > li{
+        border-bottom: 0;
+        border-top: 1px solid rgba(255, 255, 255, 0.15);
+        box-sizing: border-box;
+        display: block;    
+    }
+    nav.navbar.bootsnav .navbar-nav > li > a{
+        border-bottom: 0;
+    }    
+    nav.navbar.bootsnav .navbar-nav{
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 }
