--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -1131,6 +1131,11 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
     }
 }
 
+@media (min-width: 993px) and (max-width: 1023px){
+    nav.navbar.bootsnav ul.nav > li > a {
+        padding: 20px 10px;
+    }
+}
 @media (max-width: 992px) {
     /* Navbar Responsive
     =================================*/
